[tool.poetry]
name = "particles"
version = "0.1.0"
description = ""
authors = ["atsuhiron <atsuronreplaced@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10 <3.12"
numpy = "^1.23.4"
matplotlib = "^3.6.1"
ipython = "^8.5.0"
cupy-cuda11x = "^11.2.0"
tqdm = "^4.64.1"
scipy = "^1.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
